Use new Preview Module

--- a/views/partials/nav.mustache
+++ b/views/partials/nav.mustache
@@ -38,9 +38,8 @@
                     </form>
                 </li>
                 <li>
-                    <a href="{{ postbox_url }}/m50000/messages" class="notification-menu" id="postbox-link" data-error-msg="Briefkasten zurzeit nicht erreichbar!">
+                    <a href="{{ postbox_url }}/m50000/messages" class="notification-menu" data-preview="enabled" data-preview-title="Benachrichtigungen" data-preview-selector="table.messages-overview" data-preview-error-msg="Briefkasten zurzeit nicht erreichbar!">
                         <span class="topbar-notifications icon-mail-2-filled icon-lg"></span>
-                        <span class="topbar-notifications-label">Benachrichtigungen</span>
                     </a>
                 </li>
                 <li class="dropdown">
