--- a/views/partials/portfolio_shelf.mustache
+++ b/views/partials/portfolio_shelf.mustache
@@ -1,17 +1,17 @@
 <ul class="customer-card-portfolio">
   <li class="customer-card-portfolio-item">
-    <a href="{{ partner._links.offers.href }}" class="customer-card-portfolio-item-link" data-pjax="active">
-      Angebote <span class="customer-card-portfolio-item-quantity">({{ offers.length }})</span>
+    <a href="{{ partner._links.offers.href }}" class="customer-card-portfolio-item-link notification-menu" data-preview="enabled" data-preview-title="Angebote" data-preview-selector="table.portfolio-overview" data-preview-error-msg="Angebote nicht abrufbar!">
+      Angebote <span class="customer-card-portfolio-item-quantity"></span>
     </a>
   </li>
   <li class="customer-card-portfolio-item">
-    <a href="{{ partner._links.proposals.href }}" class="customer-card-portfolio-item-link" data-pjax="active">
-      Anträge <span class="customer-card-portfolio-item-quantity">({{ proposals.length }})</span>
+    <a href="{{ partner._links.proposals.href }}" class="customer-card-portfolio-item-link notification-menu" data-preview="enabled" data-preview-title="Anträge" data-preview-selector="table.portfolio-overview" data-preview-error-msg="Anträge nicht abrufbar!">
+      Anträge <span class="customer-card-portfolio-item-quantity"></span>
     </a>
   </li>
   <li class="customer-card-portfolio-item">
-    <a href="{{ partner._links.contracts.href }}" class="customer-card-portfolio-item-link" data-pjax="active">
-      Verträge <span class="customer-card-portfolio-item-quantity">({{ contracts.length }})</span>
+    <a href="{{ partner._links.contracts.href }}" class="customer-card-portfolio-item-link notification-menu" data-preview="enabled" data-preview-title="Verträge" data-preview-selector="table.portfolio-overview" data-preview-error-msg="Verträge nicht abrufbar!">
+      Verträge <span class="customer-card-portfolio-item-quantity"></span>
     </a>
   </li>
   <li class="customer-card-portfolio-item">
