--- a/views/offers/new.mustache
+++ b/views/offers/new.mustache
@@ -28,6 +28,8 @@
     </form>
   </div>
 
+  {{> errors }}
+
   <form class="form-horizontal scene-form" role="form" action="{{ partner._links.offers.href }}/calculation" method="post">
 
     <div class="row">
