Feedback Session for offer_validation branch

--- a/views/offers/new.mustache
+++ b/views/offers/new.mustache
@@ -28,7 +28,9 @@
     </form>
   </div>
 
-  {{> errors }}
+  {{# offer }}
+    {{> errors }}
+  {{/ offer }}
 
   <form class="form-horizontal scene-form" role="form" action="{{ partner._links.offers.href }}/calculation" method="post">
 
