--- a/views/contracts/edit.mustache
+++ b/views/contracts/edit.mustache
@@ -318,109 +318,7 @@
 
   <div class="row">
     <div class="col-md-12">
-      <ul class="scene-summary">
-        <li>
-          <table class="table">
-            <tr>
-              <th>PKW</th>
-              <td></td>
-            </tr>
-            <tr>
-              <th></th>
-              <td></td>
-            </tr>
-            <tr>
-              <th></th>
-              <td></td>
-            </tr>
-            <tr>
-              <th></th>
-              <td></td>
-            </tr>
-            <tr>
-              <th>Normaltarif</th>
-              <td></td>
-            </tr>
-          </table>
-        </li>
-        <li>
-          <table class="table">
-            <tr>
-              <th></th>
-              <th>Regiokl.</th>
-              <th>Typkl.</th>
-            </tr>
-            <tr>
-              <th>Haftpflicht</th>
-              <td></td>
-              <td></td>
-            </tr>
-            <tr>
-              <th>Vollkasko</th>
-              <td></td>
-              <td></td>
-            </tr>
-            <tr>
-              <th>Teilkasko</th>
-              <td></td>
-              <td></td>
-            </tr>
-            <tr>
-              <th></th>
-              <td></td>
-              <td></td>
-            </tr>
-          </table>
-        </li>
-        <li>
-          <table class="table">
-            <tr>
-              <th>zu zahlender Betrag</th>
-              <th></th>
-            </tr>
-            <tr>
-              <th></th>
-              <td></td>
-            </tr>
-            <tr>
-              <th></th>
-              <td></td>
-            </tr>
-            <tr>
-              <th></th>
-              <td></td>
-            </tr>
-            <tr>
-              <th>Schlüssel</th>
-              <td></td>
-            </tr>
-          </table>
-        </li>
-        <li>
-          <table class="table">
-            <tr>
-              <th>enthaltene Versicherungssteuer</th>
-              <th></th>
-            </tr>
-            <tr>
-              <th></th>
-              <td></td>
-            </tr>
-            <tr>
-              <th></th>
-              <td></td>
-            </tr>
-            <tr>
-              <th></th>
-              <td></td>
-            </tr>
-            <tr>
-              <th></th>
-              <td></td>
-            </tr>
-          </table>
-        </li>
-      </ul>
+      {{> scene_summary }}
     </div>
   </div>
 
