--- a/views/offers/show.mustache
+++ b/views/offers/show.mustache
@@ -250,7 +250,15 @@
     <div class="row">
       <div class="col-md-12">
         <div class="btn-group">
-          <a href="{{ offer.offerEditUri }}" class="btn btn-default">Angebot bearbeiten</a>
+          <a href="{{ offer.offerEditUri }}" class="btn btn-default">
+            Angebot bearbeiten
+          </a>
+        </div>
+
+        <div class="btn-group">
+          <form action="{{ offer.offerCopyUri}}" method="post">
+            <input type="submit" class="btn btn-default" value="Als Kopie bearbeiten" />
+          </form>
         </div>
 
       </div>
