--- a/views/offers/new.mustache
+++ b/views/offers/new.mustache
@@ -278,7 +278,7 @@
       <div class="row">
         <div class="col-md-12">
           <div class="btn-group">
-            <button type="submit" class="btn btn-primary">Berechnen</button>
+            <input type="submit" class="btn btn-primary" value="Berechnen">
           </div>
         </div>
       </div>
