--- a/views/offers/new.mustache
+++ b/views/offers/new.mustache
@@ -47,9 +47,13 @@
 
           <div>
             <div id="vehicleData" class="tab-pane">
-
               <fieldset class="scene-fieldset">
+                {{# errors.vehicleData.vehicleType }}
+                <div class="form-group has-error">
+                {{/ errors.vehicleData.vehicleType }}
+                {{^ errors.vehicleData.vehicleType }}
                 <div class="form-group">
+                {{/ errors.vehicleData.vehicleType }}
                   <label for="vehicleData.vehicleType" class="control-label">Fahrzeugart</label>
                   <div class="fields">
                     <select id="vehicleData.vehicleType" name="vehicleData.vehicleType" class="form-control">
@@ -59,14 +63,24 @@
                   </div>
                 </div>
 
+                {{# errors.vehicleData.licensePlate }}
+                <div class="form-group has-error">
+                {{/ errors.vehicleData.licensePlate }}
+                {{^ errors.vehicleData.licensePlate }}
                 <div class="form-group">
+                {{/ errors.vehicleData.licensePlate }}
                   <label for="vehicleData.licensePlate" class="control-label">Kennzeichen</label>
                   <div class="fields form-inline">
                     <input type="text" id="vehicleData.licensePlate" name="vehicleData.licensePlate" class="form-control" value="{{ offer.vehicleData.licensePlate }}">
                   </div>
                 </div>
 
+                {{# errors.vehicleData.manufacturerNo }}
+                <div class="form-group has-error">
+                {{/ errors.vehicleData.manufacturerNo }}
+                {{^ errors.vehicleData.manufacturerNo }}
                 <div class="form-group">
+                {{/ errors.vehicleData.manufacturerNo }}
                   <label for="vehicleData.manufacturerNo" class="control-label">Hersteller-Nr.</label>
                   <div class="fields form-inline">
                     <div class="input-group">
@@ -75,21 +89,36 @@
                   </div>
                 </div>
 
+                {{# errors.vehicleData.typeKey }}
+                <div class="form-group has-error">
+                {{/ errors.vehicleData.typeKey }}
+                {{^ errors.vehicleData.typeKey }}
                 <div class="form-group">
+                {{/ errors.vehicleData.typeKey }}
                   <label for="vehicleData.typeKey" class="control-label">Typschlüssel-Nr. <a class="control-label-help-link" data-toggle="modal" data-target=".modal-help-example" href="#"><i class="icon-question"></i></a></label>
                   <div class="fields">
                     <input type="search" id="vehicleData.typeKey" name="vehicleData.typeKey" class="form-control" value="{{ offer.vehicleData.typeKey }}">
                   </div>
                 </div>
 
+                {{# errors.vehicleData.registrationDate }}
+                <div class="form-group has-error">
+                {{/ errors.vehicleData.registrationDate }}
+                {{^ errors.vehicleData.registrationDate }}
                 <div class="form-group">
+                {{/ errors.vehicleData.registrationDate }}
                   <label for="vehicleData.registrationDate" class="control-label">Erstzulassung</label>
                   <div class="fields">
                     <input type="month" id="vehicleData.registrationDate" class="form-control" value="{{ offer.vehicleData.registrationDate }}">
                   </div>
                 </div>
 
+                {{# errors.vehicleData.identificationNumber }}
+                <div class="form-group has-error">
+                {{/ errors.vehicleData.identificationNumber }}
+                {{^ errors.vehicleData.identificationNumber }}
                 <div class="form-group">
+                {{/ errors.vehicleData.identificationNumber }}
                   <label for="vehicleData.identificationNumber" class="control-label">Fahrgestell-Nr.</label>
                   <div class="fields">
                     <input type="text" id="vehicleData.identificationNumber" class="form-control" value="{{ offer.vehicleData.identificationNumber }}">
@@ -128,7 +157,12 @@
                   </div>
                 </div>
 
+                {{# errors.vehicleData.changeableEngine }}
+                <div class="form-group has-error">
+                {{/ errors.vehicleData.changeableEngine }}
+                {{^ errors.vehicleData.changeableEngine }}
                 <div class="form-group">
+                {{/ errors.vehicleData.changeableEngine }}
                   <label class="control-label">Austauschmotor</label>
                   <div class="col-sm-3 form-group-multiple-item">
                     <label class="radio-inline">
@@ -145,14 +179,24 @@
 
             <div id="usage" class="tab-pane">
               <fieldset class="scene-fieldset">
+                {{# errors.usage.anyDriver }}
+                <div class="form-group has-error">
+                {{/ errors.usage.anyDriver }}
+                {{^ errors.usage.anyDriver }}
                 <div class="form-group">
+                {{/ errors.usage.anyDriver }}
                   <label for="usage.anyDriver" class="control-label">beliebige Fahrer</label>
                   <div class="fields">
                     <input type="text" id="usage.anyDriver" name="usage.anyDriver" class="form-control" value="{{ offer.usage.anyDriver }}">
                   </div>
                 </div>
 
+                {{# errors.usage.differentVehicleOwner }}
+                <div class="form-group has-error">
+                {{/ errors.usage.differentVehicleOwner }}
+                {{^ errors.usage.differentVehicleOwner }}
                 <div class="form-group">
+                {{/ errors.usage.differentVehicleOwner }}
                   <label for="kfz-abweichenderFahrzeughalter" class="control-label">abweichender Fahrzeughalter</label>
                   <div class="col-sm-3 form-group-multiple-item">
                     <label class="radio-inline">
@@ -164,14 +208,24 @@
                   </div>
                 </div>
 
+                {{# errors.usage.drivingPerformance }}
+                <div class="form-group has-error">
+                {{/ errors.usage.drivingPerformance }}
+                {{^ errors.usage.drivingPerformance }}
                 <div class="form-group">
+                {{/ errors.usage.drivingPerformance }}
                   <label for="usage.drivingPerformance" class="control-label">Fahrleistung (jährl./Saison)</label>
                   <div class="fields">
                     <input type="text" id="usage.drivingPerformance" name="usage.drivingPerformance" class="form-control" value="{{ offer.usage.drivingPerformance }}">
                   </div>
                 </div>
 
+                {{# errors.usage.mileage }}
+                <div class="form-group has-error">
+                {{/ errors.usage.mileage }}
+                {{^ errors.usage.mileage }}
                 <div class="form-group">
+                {{/ errors.usage.mileage }}
                   <label for="usage.mileage" class="control-label">Kilometerstand</label>
                   <div class="fields">
                     <input type="text" id="usage.mileage" name="usage.mileage" class="form-control" value="{{ offer.usage.mileage }}">
@@ -180,14 +234,24 @@
               </fieldset>
 
               <fieldset class="scene-fieldset">
+                {{# errors.usage.usage }}
+                <div class="form-group has-error">
+                {{/ errors.usage.usage }}
+                {{^ errors.usage.usage }}
                 <div class="form-group">
+                {{/ errors.usage.usage }}
                   <label for="usage.usage" class="control-label">Fahrzeugnutzung</label>
                   <div class="fields">
                     <input type="text" id="usage.usage" name="usage.usage" class="form-control" value="{{ offer.usage.usage }}">
                   </div>
                 </div>
 
+                {{# errors.usage.ownerOccupiedHome }}
+                <div class="form-group has-error">
+                {{/ errors.usage.ownerOccupiedHome }}
+                {{^ errors.usage.ownerOccupiedHome }}
                 <div class="form-group">
+                {{/ errors.usage.ownerOccupiedHome }}
                   <label class="control-label">selbstgen. Wohneigentum</label>
                   <div class="col-sm-3 form-group-multiple-item">
                     <label class="radio-inline">
@@ -199,14 +263,24 @@
                   </div>
                 </div>
 
+                {{# errors.usage.homeOwnershipType }}
+                <div class="form-group has-error">
+                {{/ errors.usage.homeOwnershipType }}
+                {{^ errors.usage.homeOwnershipType }}
                 <div class="form-group">
+                {{/ errors.usage.homeOwnershipType }}
                   <label for="usage.homeOwnershipType" class="control-label">Wohneigentumsart</label>
                   <div class="fields">
                     <input type="text" id="usage.homeOwnershipType" name="usage.homeOwnershipType" class="form-control" value="{{ offer.usage.homeOwnershipType }}">
                   </div>
                 </div>
 
+                {{# errors.usage.nightlyPound }}
+                <div class="form-group has-error">
+                {{/ errors.usage.nightlyPound }}
+                {{^ errors.usage.nightlyPound }}
                 <div class="form-group">
+                {{/ errors.usage.nightlyPound }}
                   <label for="usage.nightlyPound" class="control-label">nächtlicher Abstellplatz</label>
                   <div class="fields">
                     <input type="text" id="usage.nightlyPound" name="usage.nightlyPound" class="form-control" value="{{ offer.usage.nightlyPound }}">
@@ -217,28 +291,48 @@
 
             <div id="insuranceCover" class="tab-pane">
               <fieldset class="scene-fieldset">
+                {{# errors.insuranceCover.basicAgreement }}
+                <div class="form-group has-error">
+                {{/ errors.insuranceCover.basicAgreement }}
+                {{^ errors.insuranceCover.basicAgreement }}
                 <div class="form-group">
+                {{/ errors.insuranceCover.basicAgreement }}
                   <label for="insuranceCover.basicAgreement" class="control-label">Rahmenvertrag</label>
                   <div class="fields">
                     <input type="text" id="insuranceCover.basicAgreement" name="insuranceCover.basicAgreement" class="form-control" value="{{ offer.insuranceCover.basicAgreement }}">
                   </div>
                 </div>
 
+                {{# errors.insuranceCover.wageGroup }}
+                <div class="form-group has-error">
+                {{/ errors.insuranceCover.wageGroup }}
+                {{^ errors.insuranceCover.wageGroup }}
                 <div class="form-group">
+                {{/ errors.insuranceCover.wageGroup }}
                   <label for="insuranceCover.wageGroup" class="control-label">Tarifgruppe</label>
                   <div class="fields">
                     <input type="text" id="insuranceCover.wageGroup" name="insuranceCover.wageGroup" class="form-control" value="{{ offer.insuranceCover.wageGroup }}">
                   </div>
                 </div>
 
+                {{# errors.insuranceCover.start }}
+                <div class="form-group has-error">
+                {{/ errors.insuranceCover.start }}
+                {{^ errors.insuranceCover.start }}
                 <div class="form-group">
+                {{/ errors.insuranceCover.start }}
                   <label for="insuranceCover.start" class="control-label">Versicherungsbeginn</label>
                   <div class="fields">
                     <input type="text" id="insuranceCover.start" name="insuranceCover.start" class="form-control" value="{{ offer.insuranceCover.start }}">
                   </div>
                 </div>
 
+                {{# errors.insuranceCover.paymentMethod }}
+                <div class="form-group has-error">
+                {{/ errors.insuranceCover.paymentMethod }}
+                {{^ errors.insuranceCover.paymentMethod }}
                 <div class="form-group">
+                {{/ errors.insuranceCover.paymentMethod }}
                   <label for="insuranceCover.paymentMethod" class="control-label">Zahlungsweise</label>
                   <div class="fields">
                     <select id="insuranceCover.paymentMethod" name="insuranceCover.paymentMethod" class="form-control">
@@ -251,14 +345,24 @@
               </fieldset>
 
               <fieldset class="scene-fieldset">
+                {{# errors.insuranceCover.liabilityDiscount }}
+                <div class="form-group has-error">
+                {{/ errors.insuranceCover.liabilityDiscount }}
+                {{^ errors.insuranceCover.liabilityDiscount }}
                 <div class="form-group">
+                {{/ errors.insuranceCover.liabilityDiscount }}
                   <label for="insuranceCover.liabilityDiscount" class="control-label">Haftpflicht Schadensfreiheitrabatt</label>
                   <div class="fields">
                     <input type="text" id="insuranceCover.liabilityDiscount" name="insuranceCover.liabilityDiscount" class="form-control" value="{{ offer.insuranceCover.liabilityDiscount }}">
                   </div>
                 </div>
 
+                {{# errors.insuranceCover.comprehensiveCoverDiscount }}
+                <div class="form-group has-error">
+                {{/ errors.insuranceCover.comprehensiveCoverDiscount }}
+                {{^ errors.insuranceCover.comprehensiveCoverDiscount }}
                 <div class="form-group">
+                {{/ errors.insuranceCover.comprehensiveCoverDiscount }}
                   <label for="insuranceCover.comprehensiveCoverDiscount" class="control-label">Vollkasko-Schadensfreiheitrabatt</label>
                   <div class="fields">
                     <input type="text" id="insuranceCover.comprehensiveCoverDiscount" name="insuranceCover.comprehensiveCoverDiscount" class="form-control" value="{{ offer.insuranceCover.comprehensiveCoverDiscount }}">
