--- a/views/partials/contracts.mustache
+++ b/views/partials/contracts.mustache
@@ -21,6 +21,7 @@
         <td class="col-portfolio-payment-amount text-right">{{ formattedFee }}</td>
         <td>
           <a href="{{ contractUri }}" class="btn btn-default btn-xs" data-pjax="active">Öffnen</a>
+          <a href="{{ contractUri }}" class="btn btn-default btn-xs" target="_blank">In neuem Tab öffnen</a>
         </td>
       </tr>
       {{/ contracts }}
