--- a/views/partials/offers.mustache
+++ b/views/partials/offers.mustache
@@ -42,6 +42,7 @@
         <td class="col-portfolio-payment-amount text-right">{{ formattedFee }}</td>
         <td>
           <a href="{{ offerUri }}" class="btn btn-default btn-xs" data-pjax="active">Öffnen</a>
+          <a href="{{ offerUri }}" class="btn btn-default btn-xs" target="_blank">In neuem Tab öffnen</a>
         </td>
       </tr>
       {{/ offers }}
