--- a/views/offers/new.mustache
+++ b/views/offers/new.mustache
@@ -60,7 +60,9 @@
                       <option>{{ offer.vehicleData.vehicleType }}</option>
                       <option>…</option>
                     </select>
+                    {{# errors.vehicleData.vehicleType }}
                     <span class="help-block">{{ errors.vehicleData.vehicleType.fehlerText }}</span>
+                    {{/ errors.vehicleData.vehicleType }}
                   </div>
                 </div>
 
@@ -73,7 +75,9 @@
                   <label for="vehicleData.licensePlate" class="control-label">Kennzeichen</label>
                   <div class="fields form-inline">
                     <input type="text" id="vehicleData.licensePlate" name="vehicleData.licensePlate" class="form-control" value="{{ offer.vehicleData.licensePlate }}">
+                    {{# errors.vehicleData.licensePlate }}
                     <span class="help-block">{{ errors.vehicleData.licensePlate.fehlerText }}</span>
+                    {{/ errors.vehicleData.licensePlate }}
                   </div>
                 </div>
 
@@ -88,7 +92,9 @@
                     <div class="input-group">
                       <input type="search" id="vehicleData.manufacturerNo" name="vehicleData.manufacturerNo" class="form-control" value="{{ offer.vehicleData.manufacturerNo }}">
                     </div>
+                    {{# errors.vehicleData.manufacturerNo }}
                     <span class="help-block">{{ errors.vehicleData.manufacturerNo.fehlerText }}</span>
+                    {{/ errors.vehicleData.manufacturerNo }}
                   </div>
                 </div>
 
@@ -101,7 +107,9 @@
                   <label for="vehicleData.typeKey" class="control-label">Typschlüssel-Nr. <a class="control-label-help-link" data-toggle="modal" data-target=".modal-help-example" href="#"><i class="icon-question"></i></a></label>
                   <div class="fields">
                     <input type="search" id="vehicleData.typeKey" name="vehicleData.typeKey" class="form-control" value="{{ offer.vehicleData.typeKey }}">
+                    {{# errors.vehicleData.typeKey }}
                     <span class="help-block">{{ errors.vehicleData.typeKey.fehlerText }}</span>
+                    {{/ errors.vehicleData.typeKey }}
                   </div>
                 </div>
 
@@ -114,7 +122,9 @@
                   <label for="vehicleData.registrationDate" class="control-label">Erstzulassung</label>
                   <div class="fields">
                     <input type="month" id="vehicleData.registrationDate" class="form-control" value="{{ offer.vehicleData.registrationDate }}">
+                    {{# errors.vehicleData.registrationDate }}
                     <span class="help-block">{{ errors.vehicleData.registrationDate.fehlerText }}</span>
+                    {{/ errors.vehicleData.registrationDate }}
                   </div>
                 </div>
 
@@ -127,7 +137,9 @@
                   <label for="vehicleData.identificationNumber" class="control-label">Fahrgestell-Nr.</label>
                   <div class="fields">
                     <input type="text" id="vehicleData.identificationNumber" class="form-control" value="{{ offer.vehicleData.identificationNumber }}">
+                    {{# errors.vehicleData.identificationNumber }}
                     <span class="help-block">{{ errors.vehicleData.identificationNumber.fehlerText }}</span>
+                    {{/ errors.vehicleData.identificationNumber }}
                   </div>
                 </div>
               </fieldset>
@@ -177,7 +189,9 @@
                     <label class="radio-inline">
                       <input name="vehicleData.changeableEngine" value="true" type="radio"> ja
                     </label>
+                    {{# errors.vehicleData.changeableEngine }}
                     <span class="help-block">{{ errors.vehicleData.changeableEngine.fehlerText }}</span>
+                    {{/ errors.vehicleData.changeableEngine }}
                   </div>
                 </div>
 
@@ -195,7 +209,9 @@
                   <label for="usage.anyDriver" class="control-label">beliebige Fahrer</label>
                   <div class="fields">
                     <input type="text" id="usage.anyDriver" name="usage.anyDriver" class="form-control" value="{{ offer.usage.anyDriver }}">
+                    {{# errors.usage.anyDriver }}
                     <span class="help-block">{{ errors.usage.anyDriver.fehlerText }}</span>
+                    {{/ errors.usage.anyDriver }}
                   </div>
                 </div>
 
@@ -213,7 +229,9 @@
                     <label class="radio-inline">
                       <input name="usage.differentVehicleOwner" value="true" type="radio"> ja
                     </label>
+                    {{# errors.usage.differentVehicleOwner }}
                     <span class="help-block">{{ errors.usage.differentVehicleOwner.fehlerText }}</span>
+                    {{/ errors.usage.differentVehicleOwner }}
                   </div>
                 </div>
 
@@ -226,7 +244,9 @@
                   <label for="usage.drivingPerformance" class="control-label">Fahrleistung (jährl./Saison)</label>
                   <div class="fields">
                     <input type="text" id="usage.drivingPerformance" name="usage.drivingPerformance" class="form-control" value="{{ offer.usage.drivingPerformance }}">
+                    {{# errors.usage.drivingPerformance }}
                     <span class="help-block">{{ errors.usage.drivingPerformance.fehlerText }}</span>
+                    {{/ errors.usage.drivingPerformance }}
                   </div>
                 </div>
 
@@ -239,7 +259,9 @@
                   <label for="usage.mileage" class="control-label">Kilometerstand</label>
                   <div class="fields">
                     <input type="text" id="usage.mileage" name="usage.mileage" class="form-control" value="{{ offer.usage.mileage }}">
+                    {{# errors.usage.mileage }}
                     <span class="help-block">{{ errors.usage.mileage.fehlerText }}</span>
+                    {{/ errors.usage.mileage }}
                   </div>
                 </div>
               </fieldset>
@@ -254,7 +276,9 @@
                   <label for="usage.usage" class="control-label">Fahrzeugnutzung</label>
                   <div class="fields">
                     <input type="text" id="usage.usage" name="usage.usage" class="form-control" value="{{ offer.usage.usage }}">
+                    {{# errors.usage.usage }}
                     <span class="help-block">{{ errors.usage.mileage.fehlerText }}</span>
+                    {{/ errors.usage.usage }}
                   </div>
                 </div>
 
@@ -272,7 +296,9 @@
                     <label class="radio-inline">
                       <input name="usage.ownerOccupiedHome" value="true" type="radio"> ja
                     </label>
+                    {{# errors.usage.ownerOccupiedHome }}
                     <span class="help-block">{{ errors.usage.ownerOccupiedHome.fehlerText }}</span>
+                    {{/ errors.usage.ownerOccupiedHome }}
                   </div>
                 </div>
 
@@ -285,7 +311,9 @@
                   <label for="usage.homeOwnershipType" class="control-label">Wohneigentumsart</label>
                   <div class="fields">
                     <input type="text" id="usage.homeOwnershipType" name="usage.homeOwnershipType" class="form-control" value="{{ offer.usage.homeOwnershipType }}">
+                    {{# errors.usage.homeOwnershipType }}
                     <span class="help-block">{{ errors.usage.homeOwnershipType.fehlerText }}</span>
+                    {{/ errors.usage.homeOwnershipType }}
                   </div>
                 </div>
 
@@ -298,7 +326,9 @@
                   <label for="usage.nightlyPound" class="control-label">nächtlicher Abstellplatz</label>
                   <div class="fields">
                     <input type="text" id="usage.nightlyPound" name="usage.nightlyPound" class="form-control" value="{{ offer.usage.nightlyPound }}">
+                    {{# errors.usage.nightlyPound }}
                     <span class="help-block">{{ errors.usage.nightlyPound.fehlerText }}</span>
+                    {{/ errors.usage.nightlyPound }}
                   </div>
                 </div>
               </fieldset>
@@ -315,7 +345,9 @@
                   <label for="insuranceCover.basicAgreement" class="control-label">Rahmenvertrag</label>
                   <div class="fields">
                     <input type="text" id="insuranceCover.basicAgreement" name="insuranceCover.basicAgreement" class="form-control" value="{{ offer.insuranceCover.basicAgreement }}">
+                    {{# errors.insuranceCover.basicAgreement }}
                     <span class="help-block">{{ errors.insuranceCover.basicAgreement.fehlerText }}</span>
+                    {{/ errors.insuranceCover.basicAgreement }}
                   </div>
                 </div>
 
@@ -328,7 +360,9 @@
                   <label for="insuranceCover.wageGroup" class="control-label">Tarifgruppe</label>
                   <div class="fields">
                     <input type="text" id="insuranceCover.wageGroup" name="insuranceCover.wageGroup" class="form-control" value="{{ offer.insuranceCover.wageGroup }}">
+                    {{# errors.insuranceCover.wageGroup }}
                     <span class="help-block">{{ errors.insuranceCover.wageGroup.fehlerText }}</span>
+                    {{/ errors.insuranceCover.wageGroup }}
                   </div>
                 </div>
 
@@ -341,7 +375,9 @@
                   <label for="insuranceCover.start" class="control-label">Versicherungsbeginn</label>
                   <div class="fields">
                     <input type="text" id="insuranceCover.start" name="insuranceCover.start" class="form-control" value="{{ offer.insuranceCover.start }}">
+                    {{# errors.insuranceCover.start }}
                     <span class="help-block">{{ errors.insuranceCover.start.fehlerText }}</span>
+                    {{/ errors.insuranceCover.start }}
                   </div>
                 </div>
 
@@ -358,7 +394,9 @@
                         <option id="{{ id }}" value="{{ name }}">{{ name }}</option>
                       {{/ offer.insuranceCover.availablePaymentMethods }}
                     </select>
+                    {{# errors.insuranceCover.paymentMethod }}
                     <span class="help-block">{{ errors.insuranceCover.paymentMethod.fehlerText }}</span>
+                    {{/ errors.insuranceCover.paymentMethod }}
                   </div>
                 </div>
               </fieldset>
@@ -373,7 +411,9 @@
                   <label for="insuranceCover.liabilityDiscount" class="control-label">Haftpflicht Schadensfreiheitrabatt</label>
                   <div class="fields">
                     <input type="text" id="insuranceCover.liabilityDiscount" name="insuranceCover.liabilityDiscount" class="form-control" value="{{ offer.insuranceCover.liabilityDiscount }}">
+                    {{# errors.insuranceCover.liabilityDiscount }}
                     <span class="help-block">{{ errors.insuranceCover.liabilityDiscount.fehlerText }}</span>
+                    {{/ errors.insuranceCover.liabilityDiscount }}
                   </div>
                 </div>
 
@@ -386,7 +426,9 @@
                   <label for="insuranceCover.comprehensiveCoverDiscount" class="control-label">Vollkasko-Schadensfreiheitrabatt</label>
                   <div class="fields">
                     <input type="text" id="insuranceCover.comprehensiveCoverDiscount" name="insuranceCover.comprehensiveCoverDiscount" class="form-control" value="{{ offer.insuranceCover.comprehensiveCoverDiscount }}">
+                    {{# errors.insuranceCover.comprehensiveCoverDiscount }}
                     <span class="help-block">{{ errors.insuranceCover.comprehensiveCoverDiscount.fehlerText }}</span>
+                    {{/ errors.insuranceCover.comprehensiveCoverDiscount }}
                   </div>
                 </div>
               </fieldset>
