Adjust to the new version of lvm-las-assets

--- a/views/partials/nav.mustache
+++ b/views/partials/nav.mustache
@@ -38,7 +38,7 @@
                     </form>
                 </li>
                 <li>
-                    <a href="{{ postbox_url }}/m50000/messages" class="notification-menu" data-preview="enabled" data-preview-title="Benachrichtigungen" data-preview-selector="table.messages-overview" data-preview-error-msg="Briefkasten zurzeit nicht erreichbar!">
+                    <a href="{{ postbox_url }}/m50000/messages" class="preview" data-preview="enabled" data-preview-title="Benachrichtigungen" data-preview-selector="table.messages-overview" data-preview-error-msg="Briefkasten zurzeit nicht erreichbar!" data-preview-count="tbody>tr" data-preview-window>
                         <span class="topbar-notifications icon-mail-2-filled icon-lg"></span>
                     </a>
                 </li>
