--- a/views/partials/offers.mustache
+++ b/views/partials/offers.mustache
@@ -4,6 +4,7 @@
       <tr>
         <th class="sort" data-sort="col-portfolio-id">#</th>
         <th class="sort" data-sort="col-portfolio-status">Status</th>
+        {{^ isEmbedded }}
         <th class="sort" data-sort="col-portfolio-role">Beteiligung</th>
         <th class="sort" data-sort="col-portfolio-id">Versicherungsschein</th>
         <th class="sort" data-sort="col-portfolio-agency">Agentur</th>
@@ -12,6 +13,7 @@
         <th class="sort" data-sort="col-portfolio-claims">Schäden</th>
         <th class="sort" data-sort="col-portfolio-expiry">Ablauf</th>
         <th class="sort" data-sort="col-portfolio-payment-interval">Turnus</th>
+        {{/ isEmbedded }}
         <th class="sort text-right" data-sort="col-portfolio-payment-amount">Beitrag</th>
         <th>Aktion</th>
       </tr>
@@ -26,6 +28,7 @@
           <i title="" data-original-title="" class="icon-circle-line active" data-toggle="popover" data-content="Storniert" data-placement="top"></i>
           <!-- <span class="col&#45;portfolio&#45;status&#45;label">Storniert</span> -->
         </td>
+        {{^ isEmbedded }}
         <td class="col-portfolio-role">{{ role }}</td>
         <td class="col-portfolio-id"></td>
         <td class="col-portfolio-agency">{{ agency }}</td>
@@ -39,6 +42,7 @@
         <td class="col-portfolio-payment-interval">
           <span>{{ paymentInterval }}</span>
         </td>
+        {{/ isEmbedded }}
         <td class="col-portfolio-payment-amount text-right">{{ formattedFee }}</td>
         <td>
           <a href="{{ offerUri }}" class="btn btn-default btn-xs" data-pjax="active">Öffnen</a>
