change submit button label

--- a/views/offers/new.mustache
+++ b/views/offers/new.mustache
@@ -544,7 +544,7 @@
       <div class="row">
         <div class="col-md-12">
           <div class="btn-group">
-            <input type="submit" class="btn btn-primary" value="Berechnen">
+            <input type="submit" class="btn btn-primary" value="Speichern">
           </div>
         </div>
       </div>
