--- a/views/layout.mustache
+++ b/views/layout.mustache
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>LVM LAS ROCA</title>
+    <title>{{ title }}</title>
     <meta name="description" content="">
-    <meta name=viewport content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/assets/application.css">
   </head>
 
