--- a/views/offers/new.mustache
+++ b/views/offers/new.mustache
@@ -65,6 +65,15 @@
                   </div>
                 </div>
 
+                <div class="form-group">
+                  <label for="personal.job-id" class="control-label">Berufs ID</label>
+                  <div class="fields form-inline">
+                    <input type="text" id="personal.job-id" name="personal.job-id" class="form-control">
+                    <span class="help-block">
+                      <a href="/jobs" target="_blank">Zur Berufssuche</a>
+                  </div>
+                </div>
+
                 {{# errors.personal.street }}
                 <div class="form-group has-error">
                 {{/ errors.personal.street }}
