Progressive Enhancement for job selection

--- a/views/offers/new.mustache
+++ b/views/offers/new.mustache
@@ -65,7 +65,7 @@
                   </div>
                 </div>
 
-                <div class="form-group">
+                <div data-selectify="active" data-selectify-target="/jobs/results" class="form-group">
                   <label for="personal.job-id" class="control-label">Berufs ID</label>
                   <div class="fields form-inline">
                     <input type="text" id="personal.job-id" name="personal.job-id" class="form-control">
