--- a/views/offers/new.mustache
+++ b/views/offers/new.mustache
@@ -73,9 +73,9 @@
                 <div data-selectify="active" data-selectify-target="/jobs/results" class="form-group">
                   <label for="personal.job-id" class="control-label">Berufs ID</label>
                   <div class="fields form-inline">
-                    <input type="text" id="personal.job-id" name="personal.job-id" class="form-control">
-                    <span class="help-block">
-                      <a href="/jobs" target="_blank">Zur Berufssuche</a>
+                    <input type="text" id="personal.job-id" name="personal.job-id" class="form-control" value="{{ offer.personal.jobId }}">
+                    <input type="submit" class="btn btn-default" form="job-form" value="Berufsuche öffnen" />
+
                   </div>
                 </div>
 
@@ -552,4 +552,9 @@
       </div>
 
   </form>
+
+  <form action="/jobs" id="job-form" method="get">
+    <input type="hidden" name="referer" value="/partners/{{ partner.id }}/offers/new">
+  </form>
+
   </div>
