Better Example for Search Query

--- a/views/search.mustache
+++ b/views/search.mustache
@@ -11,7 +11,7 @@
               data-complete-results="onebox-results"
               data-complete-min-length="3"
               class="onebox-search"
-              placeholder="nach Kundendaten suchen, z.B. &quot;Rich&quot;" autofocus>
+              placeholder="nach Kundendaten suchen, z.B. &quot;Mey&quot;" autofocus>
     </div>
     <div class="btn-group onebox-settings">
       <button type="submit" class="btn btn-lg btn-default">Suchen</button>
